# guit-app/src/app.ts
@@ -1,7 +1,6 @@
 import { Hono } from 'hono'
 import { swaggerUI } from '@hono/swagger-ui'
 import { serveStatic } from '@hono/node-server/serve-static';
-import categories from './routes/categories.routes';
 import v2 from './routes/v2.routes';
 import { AppError, renderError } from './libs/errors';
 import { jsonSuccess } from './libs/http';
@@ -46,7 +45,6 @@ app.notFound((c) => {
 });
 
 // Routes
-app.route('/category', categories);
 app.route('/api/v2', v2);
 
 export default app;
